# vn-grounded-qa

./: .gitignore  README.md  pyproject.toml
aliases/: core.csv
corpus/architecture/: README.md  manifest.json
corpus/legal-regression/: README.md  manifest.json
corpus/production-shadow/: README.md  manifest.json
docs/: ADR-001.md  ANSWER_CONTRACT.schema.json  COMPLETION_PLAN.md  GOAL.md  GOVERNED_INPUTS_RUNBOOK.md  GOVERNED_SOURCE_ACQUISITION.md  IMPLEMENTATION.md  IMPLEMENTATION_MATRIX.md  LLM_ASSISTED_MODE.md  M0_SCOPE.md  MILESTONE_ROADMAP.md  PARSERS.md  RISK_REGISTER.md  SEGMENTATION.md  TOOL_CONTRACTS.md
eval/: synthetic_mvp_seed.jsonl  taxonomy.yaml
reports/: completion_audit.md  governed_readiness.json  m0_decision.md  m0_gate.json  m1_auto_seed.json  m1_decision.md  m1_fallback_seed.json  m1_gate.json  m2_gate.json  m3_gate.json  m4_gate.json  m5_baseline_comparison.md  m5_gate.json  m6_gate.json  release_decision.md  release_decision_strict.md  release_gate.json  release_gate_strict.json  source_candidates_exa.md
src/vn_grounded_qa/: __init__.py  answer.py  bakeoff.py  baselines.py  cli.py  contracts.py  corpus.py  decisions.py  eval.py  gates.py  llm.py  models.py  normalize.py  parsers.py  readiness.py  risks.py  semantic.py  semantic_models.py  store.py  tools.py
tests/: test_answer_contract.py  test_bakeoff.py  test_corpus.py  test_corpus_packs.py  test_decisions.py  test_evalset.py  test_gates.py  test_grounded_qa.py  test_llm_assisted.py  test_normalize.py  test_readiness.py  test_risks.py
(+27 files in other folders)
